<resources>
    <string name="app_name">CustomProject</string>
    <string name="background">background</string>
    <string name="todo">Todo</string>
    <string name="login">Log In</string>
    <string name="enterYourEmail">Enter your Email</string>
    <string name="enterYourPassword">Enter your Password</string>
    <string name="retype">Retype your Password</string>
    <string name="signup">Sign Up</string>
    <string name="next">next</string>
    <string name="registered">Already registered?</string>
    <string name="notregistered">Not Registered?</string>
    <string name="typeinput">Enter Todo</string>
    <string name="complete">Complete</string>
    <string name="edit_task">Edit tasks</string>
    <string name="logout">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
</resources>