<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PopUpFragment"
    android:id="@+id/addTodoLayout">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todoText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/typeinput"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/time"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="1dp"
                android:text="@string/select_time" />
            <Button
                android:id="@+id/AddBtn"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="205dp"
                android:layout_marginTop="50dp"
                android:text="@string/save" />


        </com.google.android.material.card.MaterialCardView>
</LinearLayout>